--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -128,7 +129,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.modulo10gobarbermobilefront"
+        applicationId "com.gobarberbootcamp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -179,8 +180,9 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-code-push')
     implementation project(':react-native-linear-gradient')
+    implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
